--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -1,4 +1,5 @@
 {
 	"E0100010000": "主机注册失败,但原因未知。",
-	"E0100010001": "注册主机：无效请求"
+	"E0100010001": "注册主机：无效请求",
+	"E0100010002": "该主机{{index . 0}}在系统中已注册"
 }
