更新国际化相关代码

--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -1,5 +1,6 @@
 {
 	"E0100010000": "主机注册失败,但原因未知。",
 	"E0100010001": "注册主机：无效请求",
-	"E0100010002": "该主机{{index . 0}}在系统中已注册"
+	"E0100010002": "该主机 {{index . 0}} 在系统中已注册",
+	"E0100050000": "根据过滤条件 {{index . 0}} 获取主机信息失败.原因是{{index . 1}}"
 }
