--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -1,5 +1,6 @@
 {
 	"E0100010000": "Failed to register the host, but the reason is unkonwn.",
 	"E0100010001": "Register Host: Invalid Request.",
-	"E0100010002": "The host {{index . 0}} has been registered in the system."
+	"E0100010002": "The host {{index . 0}} has been registered in the system.",
+	"E0100050000": "Failed to get the hosts with the fitler {{index . 0}}, Reason: {{index . 1}}."
 }
