i18N for local users

--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -1,6 +1,15 @@
 {
-	"E0100010000": "Failed to register the host, but the reason is unkonwn.",
-	"E0100010001": "Register Host: Invalid Request.",
+	"E0100010000": "Failed to register the host(s).",
+	"E0100010001": "Register host: invalid request.",
 	"E0100010002": "The host {{index . 0}} has been registered in the system.",
-	"E0100050000": "Failed to get the hosts with the fitler {{index . 0}}, Reason: {{index . 1}}."
+	"E0100020000": "Failed to unregister the host(s).",
+	"E0100020001": "Unregister host: invalid request.",
+	"E0100050000": "Failed to get the hosts with the fitler {{index . 0}}, Reason: {{index . 1}}.",
+	"E0100050001": "Get the registered host: invalid request",
+	"E0400030000": "Failed to create local user(s).",
+	"E0400030001": "Create the local user(s): invalid request.",
+	"E0400040000": "Failed to delete the local user(s).",
+	"E0400040001": "Delete the local user(s): invalid request.",
+	"E0400050000": "Failed to get the local user(s).",
+	"E0400050001": "Get the local users: invalid request."
 }
