--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -1,6 +1,19 @@
 {
-	"E0100010000": "主机注册失败,但原因未知。",
+	"E0100010000": "主机注册失败。",
 	"E0100010001": "注册主机：无效请求",
 	"E0100010002": "该主机 {{index . 0}} 在系统中已注册",
-	"E0100050000": "根据过滤条件 {{index . 0}} 获取主机信息失败.原因是{{index . 1}}"
+	"E0100020000": "注销主机失败。",
+	"E0100020001": "注销主机: 无效请求。",
+	"E0100050000": "根据过滤条件 {{index . 0}} 获取主机信息失败.原因是{{index . 1}}",
+	"E0100050001": "获取注册主机信息: 无效请求",
+	"E0400030000": "创建本地用户失败。",
+	"E0400030001": "创建本地用户：无效请求。",
+	"E0400040000": "删除本地用户失败。",
+	"E0400040001": "删除本地用户：无效请求。",
+	"E0400050000": "获取本地用户信息失败。",
+	"E0400050001": "获取本地用户信息：无效请求。"
 }
+
+
+
+	
